[package]
name = "wei-wsl-server"
version = "0.1.0"
edition = "2021"

description = "wei wsl server"
documentation = "https://github.com/zuiyue-com/wei-wsl-server"
homepage = "https://github.com/zuiyue-com/wei-wsl-server"
license = "MIT OR Apache-2.0"

[dependencies]
wei-single = "0.3.5"
wei-run = { path = "../wei-run" }
tokio = { version = "1", features = ["full"] }
regex = "1"
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["full"] } #"cors", "fs", "add_extension"